Further widen the td.item class to stop the "right column shifts" bug

--- a/public/stylesheets/sass/lootfactor.sass
+++ b/public/stylesheets/sass/lootfactor.sass
@@ -303,7 +303,7 @@ table.ipb_table
     min-width: 150px
   th.item, td.item
     text-align: left
-    min-width: 250px
+    min-width: 290px
   th.attendance, td.attendance
     text-align: right
     min-width: 80px
